Github-page: Fix .download .btn alignment issue on .dow-.html page
* Increase text area a lit bit more to fix that issue.
* Cleanup unwanted codes from styles.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -277,7 +277,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .mobile-nav-toggle.bi-x {
-  color: red;;
+  color: red;
 }
 
 @media (max-width: 991px) {
